--- a/crossfit-wod-api/package.json
+++ b/crossfit-wod-api/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^3.1.7"
   },
   "dependencies": {
+    "apicache": "^1.6.3",
     "body-parser": "^1.20.3",
     "express": "^4.21.0",
     "uuid": "^10.0.0"
