--- a/crossfit-wod-api/package.json
+++ b/crossfit-wod-api/package.json
@@ -17,6 +17,8 @@
     "apicache": "^1.6.3",
     "body-parser": "^1.20.3",
     "express": "^4.21.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^10.0.0"
   }
 }
